--- a/.github/workflows/buildChanges.yml
+++ b/.github/workflows/buildChanges.yml
@@ -1,8 +1,10 @@
 name: Update Slides, PDFs, HTMLs
 on:
   push:
-    branches: main
-    paths: /notebooks/**
+    branches:
+      - main
+    paths:
+      - /notebooks/**
 jobs:
   build:
     runs-on: ubuntu-latest
