--- a/.github/workflows/buildChanges.yml
+++ b/.github/workflows/buildChanges.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - /notebooks/**
+      - 'notebooks/**'
 jobs:
   build:
     runs-on: ubuntu-latest
