--- a/.github/workflows/buildChanges.yml
+++ b/.github/workflows/buildChanges.yml
@@ -14,7 +14,7 @@ jobs:
         run: pip install -r 'requirements.txt'
       - name: Make all
         run: |
-          cd ../notebooks
+          cd ./notebooks
           make all
       - name: Commit report
         run: |
