--- a/.github/workflows/buildChanges.yml
+++ b/.github/workflows/buildChanges.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install dependencies
         run: pip install -r 'requirements.txt'
+      - name: Install pandoc
+        run: apt-get install pandoc
       - name: Make all
         run: |
           cd ./notebooks
