--- a/.github/workflows/buildChanges.yml
+++ b/.github/workflows/buildChanges.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install dependencies
         run: pip install -r 'requirements.txt'
       - name: Install pandoc
-        run: apt-get install pandoc
+        run: sudo apt-get install -y pandoc
       - name: Make all
         run: |
           cd ./notebooks
