--- a/.github/workflows/buildChanges.yml
+++ b/.github/workflows/buildChanges.yml
@@ -14,6 +14,8 @@ jobs:
         run: pip install -r 'requirements.txt'
       - name: Install pandoc
         run: sudo apt-get install -y pandoc
+      - name: Install Latex
+        run: sudo apt-get install -y texlive-xetex texlive-fonts-recommended texlive-plain-generic
       - name: Make all
         run: |
           cd ./notebooks
