--- a/.github/workflows/buildChanges.yml
+++ b/.github/workflows/buildChanges.yml
@@ -11,17 +11,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: Install dependencies
         run: pip install -r 'requirements.txt'
+
       - name: Install pandoc
         run: sudo apt-get install -y pandoc
+
       - name: Install Latex
         run: sudo apt-get install -y texlive-xetex texlive-fonts-recommended texlive-plain-generic
+
       - name: Make all
         run: |
           cd ./notebooks
           make all
-      - name: Commit report
+
+      - name: Commit changes
         run: |
           git config --global user.name 'BuilderBot'
           git config --global user.email 'BuilderBot@users.noreply.github.com'
